# case-BTG-IA

./: .gitignore  AGENTS.md  README.md  opencode.json  pyproject.toml  requirements.txt
app/: Home.py  db.py
app/pages/: 1_Ofertas_Primárias.py  2_Comparativo_Players.py  3_Atividade_Institucional.py  4_Macro.py  5_Alertas.py
docs/: AGENTS.md  ARQUITETURA.md  architecture_excalidraw.json
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/lib/: api.ts  constants.ts  formatters.ts  queryKeys.ts
frontend/src/types/: index.ts
src/: inicial.py
src/agents/: agent.py  fii_agent.py
src/api/: deps.py  main.py
src/api/routers/: agent.py  alerts.py  dashboard.py  documents.py  general_scenario.py  offers.py  reports.py  settings.py
src/api/schemas/: agent.py  alert.py  dashboard.py  macro.py  offer.py  report.py
src/api/services/: insight.py
src/data_ingestion/: __init__.py  download_cvm_ofertas.py  extract_renda_fixa.py  scrape_meelion.py
src/db/: connection.py  migrate.py
src/db/migrations/: 001_initial_schema.sql  002_schema_updates.sql  003_enrichment_tables.sql  004_ai_jobs.sql  005_fix_dividend_precision.sql  006_fix_embedding_dimension.sql
src/pipeline/: embedder.py  reconcile_tickers.py  run.py  scheduler.py
tests/: conftest.py  test_api_agent.py  test_api_alerts.py  test_api_dashboard.py  test_api_documents.py  test_api_general_scenario.py  test_api_offers.py  test_api_reports.py  test_formatters.py  test_health.py  test_security.py
(+28 files in other folders)
