[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "btg-fii-analyzer"
version = "0.1.0"
description = "Plataforma interna de monitoramento de ofertas primárias de FII"
requires-python = ">=3.11"

dependencies = [
    # LLM & agents
    "langchain-groq",
    "langchain-core",
    "langgraph",

    # Database
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "pyarrow>=14.0",

    # Data collection
    "requests>=2.31",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "python-bcb",
    "yfinance>=0.2.40",
    "playwright",

    # Pipeline
    "apscheduler>=3.10",

    # Data processing
    "pandas>=2.0",

    # Embeddings & RAG
    "openai>=1.30",
    "pypdf>=4.0",
    "tiktoken>=0.7",
    "sentence-transformers>=3.0",

    # API
    "fastapi[standard]>=0.111",
    "fpdf2>=2.7",
    "uvicorn[standard]>=0.29",
    "sse-starlette>=1.8",
    "python-multipart>=0.0.9",

    # Utils
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
